# GroundWork

./: .env.example  .gitignore  .npmignore  .npmrc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  dev  generators.json  list_models.py  llms.txt  node_modules  package-lock.json  package.json  scratch.py  skills-lock.json  test_auto.py  test_auto_docs.py  test_empty_resp.py  test_func.py  test_genai.py  test_limit.py  test_part.py  test_tools.py  test_user_chat.py  tsconfig.json
tests/: pyproject.toml  requirements.txt
tests/cli/: test_bet_gate.py  test_bet_honesty.py  test_bet_mutate.py  test_bet_pack.py  test_bet_proofs.py  test_bet_proofs_live.py  test_bet_state.py  test_bet_state_view.py  test_bet_status.py  test_bet_tokens.py  test_bet_wiring.py  test_cli.py  test_delivery_sim.py  test_junk_files.py  test_manifest.py  test_migration_gate.py  test_migrations.py  test_repo_map.py  test_repo_map_conventions.py  test_state_since.py  test_status_delta.py  test_status_queue_footer.py  test_status_waiting.py  test_submodules.py  test_upgrade.py
tests/evals/: conversational_eval.py  grader.py  judge-rubric.md  list_suites.py  requirements.txt  test_roles.py  test_validation.py  test_validation2.py  validate_scaffold.py
tests/scaffolds/: test_bet_progress_template.py  test_brownfield_adopt.py  test_compilation.py  test_contracts.py  test_dev_cli_extensions.py  test_generation.py  test_generation_dev_cli_archive_record.py  test_generation_dev_cli_docs_and_bet_panel.py  test_generation_docsite_live_sync.py  test_generation_electron.py  test_generation_flutter.py  (+3 more)
(+1154 files in other folders)
